php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #47269 Typo: SoapSlient instead of SoapClient
Submitted: 2009-02-02 09:11 UTC Modified: 2009-02-02 10:00 UTC
From: php at koterov dot ru Assigned:
Status: Closed Package: SOAP related
PHP Version: 5.2.8 OS: all
Private report: No CVE-ID: None
 [2009-02-02 09:11 UTC] php at koterov dot ru
Description:
------------
In various extension error messages, e.g.

Uncaught SoapFault exception: [Client] SoapSlient::__doRequest() returned non string value

You see, "SoapSlient" instead of "SoapClient".

If you search by "SoapSlient" over the extension source code, you will find all matches.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-02-02 10:00 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 23:00:02 2026 UTC