- Fixed bug #47269 (Typo: SoapSlient instead of SoapClient)